# polverine

./: AGENTS.md  CLAUDE.md  Makefile  README.md  compose.yaml  node-red-compose.yml
bmv080-sdk-v11-2-0/: CHANGELOG.md  LICENSE.md
bmv080-sdk-v11-2-0/api/doc/: bmv080.7z  bmv080.chm
bmv080-sdk-v11-2-0/api/inc/: bmv080_defs.h
bmv080-sdk-v11-2-0/api/lib/x64/msvc/release/: bmv080.lib
bmv080-sdk-v11-2-0/api/lib/x86/msvc/release/: bmv080.lib
bmv080-sdk-v11-2-0/api_examples/_common/inc/: bmv080_example.h
bmv080-sdk-v11-2-0/api_examples/_common/src/: bmv080_example.c
bmv080-sdk-v11-2-0/api_examples/arm_cortex_m0plus/: build_arm_cortex_m0plus.cmd  platformio.ini  pre_script.py  upload_arm_cortex_m0plus.cmd
bmv080-sdk-v11-2-0/api_examples/arm_cortex_m0plus/inc/: combridge.h
bmv080-sdk-v11-2-0/api_examples/arm_cortex_m0plus/src/: combridge.cpp  main.cpp
bmv080-sdk-v11-2-0/api_examples/arm_cortex_m33f/: build_arm_cortex_m33f.cmd  platformio.ini  pre_script.py  upload_arm_cortex_m33f.cmd
bmv080-sdk-v11-2-0/api_examples/arm_cortex_m33f/src/: combridge.cpp  main.cpp
bmv080-sdk-v11-2-0/api_examples/arm_cortex_m4_m4f/: STM32F405RGTX.ld  build_arm_cortex_m4_m4f.cmd  platformio.ini  post_script.py  pre_script.py  upload_arm_cortex_m4_m4f.cmd
bmv080-sdk-v11-2-0/api_examples/arm_cortex_m4_m4f/inc/: combridge.h  main.h  stm32f4xx_hal_conf.h
bmv080-sdk-v11-2-0/api_examples/arm_cortex_m4_m4f/inc/usb_device/: usbd_cdc_if.h
bmv080-sdk-v11-2-0/api_examples/arm_cortex_m4_m4f/src/: combridge.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
bmv080-sdk-v11-2-0/api_examples/arm_cortex_m4_m4f/src/usb_device/: usbd_cdc_if.c  usbd_conf.c  usbd_desc.c
bmv080-sdk-v11-2-0/api_examples/arm_cortex_m7f/: build_arm_cortex_m7f.cmd  platformio.ini  pre_script.py  upload_arm_cortex_m7f.cmd
bmv080-sdk-v11-2-0/api_examples/arm_cortex_m7f/inc/: combridge.h
bmv080-sdk-v11-2-0/api_examples/arm_cortex_m7f/src/: combridge.cpp  main.cpp
bmv080-sdk-v11-2-0/api_examples/bst_application_board/: Makefile  build_bst_application_board.cmd  upload_bst_application_board.cmd
bmv080-sdk-v11-2-0/api_examples/bst_application_board/inc/: combridge.h
bmv080-sdk-v11-2-0/api_examples/bst_application_board/src/: combridge.c  main.c
bmv080-sdk-v11-2-0/api_examples/raspberry_pi/: .gitattributes  CMakeLists.txt  build_raspberry_pi_32bit.cmd  build_raspberry_pi_64bit.cmd  raspberry-gcc-toolchain.cmake  run_bmv080_example.sh
bmv080-sdk-v11-2-0/api_examples/raspberry_pi/inc/: combridge.h
bmv080-sdk-v11-2-0/api_examples/raspberry_pi/src/: combridge.cpp  main.cpp
bmv080-sdk-v11-2-0/api_examples/x86_x64/: CMakeLists.txt  build_x64.cmd  build_x86.cmd
bmv080-sdk-v11-2-0/api_examples/x86_x64/dep/x64/msvc/release/: combridge.lib
bmv080-sdk-v11-2-0/api_examples/x86_x64/dep/x86/msvc/release/: combridge.lib
bmv080-sdk-v11-2-0/api_examples/x86_x64/inc/: combridge.h  combridge_defs.h
bmv080-sdk-v11-2-0/api_examples/x86_x64/src/: main.c
bmv080-sdk-v11-2-0/api_examples/xtensa_esp32/: build_xtensa_esp32.cmd  platformio.ini  post_script.py  pre_script.py  sdkconfig.release_i2c_esp32  sdkconfig.release_i2c_esp32c6  sdkconfig.release_i2c_esp32s2  sdkconfig.release_i2c_esp32s3  sdkconfig.release_spi_esp32  sdkconfig.release_spi_esp32s2  sdkconfig.release_spi_esp32s3  upload_xtensa_esp32.cmd
bmv080-sdk-v11-2-0/api_examples/xtensa_esp32/inc/: combridge.h
bmv080-sdk-v11-2-0/api_examples/xtensa_esp32/src/: combridge.c  main.c
bmv080-sdk-v11-2-0/apps/web_app_bst_application_board/: index.html  launch_bmv080_web_app.bat  upload_bmv080_web_app_firmware.bat
bmv080-sdk-v11-2-0/apps/web_app_bst_application_board/bmv080/: bmv080.css  bmv080.js  device_connectivity.js  drawer.js  dutycycle_pallas.js  gauge.js  help_content.js  licenses.js  obstruction.js  plotly_time_chart_base.js  plotly_time_chart_lines.js  plotly_time_chart_markers.js  settings.js  timechart.js  udf_data_handling.js
bmv080-sdk-v11-2-0/apps/web_app_bst_application_board/bmv080/udf/: data_types.js  schema.js  udf_decoder.js
bmv080-sdk-v11-2-0/apps/web_app_bst_application_board/css/: loaders.min.css  material-design-icons.css  normalize.min.css
bmv080-sdk-v11-2-0/apps/web_app_bst_application_board/libs/justgage-1.2.2/: justgage.js
bmv080-sdk-v11-2-0/apps/web_app_bst_application_board/libs/material_components_web/: material-components-web.css  material-components-web.css.map  material-components-web.d.ts  material-components-web.js
bsec_v3-2-1-0/algo/bsec_IAQ/config/bme680/bme680_iaq_18v_300s_28d/: bsec_iaq.c  bsec_iaq.config  bsec_iaq.csv
bsec_v3-2-1-0/algo/bsec_IAQ/config/bme680/bme680_iaq_18v_300s_4d/: bsec_iaq.c  bsec_iaq.config  bsec_iaq.csv
bsec_v3-2-1-0/algo/bsec_IAQ/config/bme680/bme680_iaq_18v_3s_28d/: bsec_iaq.c  bsec_iaq.config  bsec_iaq.csv
bsec_v3-2-1-0/algo/bsec_IAQ/config/bme680/bme680_iaq_18v_3s_4d/: bsec_iaq.c  bsec_iaq.config  bsec_iaq.csv
bsec_v3-2-1-0/algo/bsec_IAQ/config/bme680/bme680_iaq_33v_300s_28d/: bsec_iaq.c  bsec_iaq.config  bsec_iaq.csv
bsec_v3-2-1-0/algo/bsec_IAQ/config/bme680/bme680_iaq_33v_300s_4d/: bsec_iaq.c  bsec_iaq.config  bsec_iaq.csv
bsec_v3-2-1-0/algo/bsec_IAQ/config/bme680/bme680_iaq_33v_3s_28d/: bsec_iaq.c  (+2 more)
bsec_v3-2-1-0/algo/bsec_IAQ_Sel/inc/: bsec_datatypes.h
bsec_v3-2-1-0/examples/BSEC_Integration_Examples/examples/bsec_iot_example/: Makefile  bsec_integration.c  bsec_integration.h  bsec_iot_example.c
bsec_v3-2-1-0/examples/BSEC_Integration_Examples/src/config/: bsec_selectivity.c
docs/bmv080/: README.md  bmv080-api-reference.md
docs/bsec/: binary-size-info.md  integration-examples.md  integration-guide.md  release-notes.md
docs/plans/: 2026-03-07-firmware-design.md
firmware/: .gitignore  CMakeLists.txt  build.sh  sdkconfig.defaults
firmware/components/bme69x/: CMakeLists.txt
firmware/components/bmv080/: CMakeLists.txt
firmware/components/bsec/: CMakeLists.txt
firmware/main/: CMakeLists.txt  bme690_task.c  bme690_task.h  bmv080_task.c  bmv080_task.h  config.example.h  cpu_temp.c  cpu_temp.h  led.c  led.h  main.c  mqtt.c  mqtt.h  pins.h
nodered/: polverine-v2-flow.json
(+102 files in other folders)
